# astrobob

./: .env.example  .gitignore  FIXES_SUMMARY.md  IMPLEMENTATION_GUIDE.md  PLAN.md  README.md  TESTING_GUIDE.md  pyproject.toml
docs/: README.md  cli-reference.html  faq.html  index.html  installation.html  mcp-tools.html  quickstart.html  search.js  serve.py  styles.css  troubleshooting.html
examples/wxo/: README.md
examples/wxo/agents/: code-memory.agent.yaml  supervisor.agent.yaml
examples/wxo/tools/: memory_tool.py
scripts/: fix_docs_nav.py  reset_demo.py  seed_demo.py  test_astra.py  test_config.py  test_doctor.py  test_fixes.py  test_ranking.py  test_reflector.py  test_retriever.py  test_skill_format.py  test_skills_sync.py  test_store.py
src/astrobob/: config.py  errors.py  models.py
src/astrobob/astra/: __init__.py  client.py  collections.py
src/astrobob/cli/: __init__.py  app.py  astra_cmd.py  doctor_cmd.py  init_cmd.py  mcp_cmd.py  memory_cmd.py  skills_cmd.py
src/astrobob/core/: __init__.py  ranking.py  reflector.py  retriever.py  store.py
src/astrobob/mcp_server/: schemas.py  server.py  tools.py
src/astrobob/skills_export/: renderer.py
src/astrobob/skills_export/templates/: learned_skill.md.j2
src/astrobob/templates/bob/: custom_modes.yaml.j2  mcp.json.j2
src/astrobob/templates/skills/: agent-reflector.md  astra-memory-engineer.md  wxo-agent-builder.md
tests/integration/: test_astra_live.py
tests/unit/: test_config.py  test_models.py  test_ranking.py
