[project]
name = "astrobob"
version = "0.1.0"
description = "Memory-powered agent toolkit giving IBM Bob persistent semantic/episodic/procedural memory via AstraDB"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "astrapy>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-ulid>=2.0.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
astrobob = "astrobob.cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
